--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -1,5 +1,37 @@
 {% extends "basefront.html.twig" %}
 {% block body %}
-<h1> Page des voyages </h1>
-
-{% endblock %}{# empty Twig template #}
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th class="text-left" scope="col">
+                    Ville
+                    <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> > </a>
+                </th>
+                <th class="text-left" scope="col">Pays</th>
+                <th class="text-end" scope="col">Note</th>
+                <th class="text-center" scope="col">Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for visite in visites %}
+                <tr>
+                    <td>
+                        <h5 class="text-primary">
+                            <a href="#">{{ visite.ville }}</a>
+                        </h5>
+                    </td>
+                    <td>
+                        {{ visite.pays }}
+                    </td>
+                    <td class="text-end">
+                        <strong>{{ visite.note }}/20</strong>
+                    </td>
+                    <td class="text-center">
+                        {{ visite.datecreationstring}}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
