--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -3,14 +3,38 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th class="text-left" scope="col">
+                <th class="text-left align-top" scope="col">
                     Ville
-                    <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
-                    <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> > </a>
+                    <a href="{{ path('voyages.sort', {champ:'ville', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('voyages.sort', {champ:'ville', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> > </a>
+                    <form class="form-inline mt-1" method="POST" action="{{ path('voyages.findallequal', {champ:"ville"}) }}">
+                        <div class="form-group mr-1 mb-2">
+                            <input type="text" class="sm" name="recherche">
+                            <button type="submit" class="btn btn-primary mb-2 btn-sm">filtrer</button>
+                        </div>
+                    </form>
                 </th>
-                <th class="text-left" scope="col">Pays</th>
-                <th class="text-end" scope="col">Note</th>
-                <th class="text-center" scope="col">Date</th>
+                <th class="text-left" scope="col">
+                    Pays
+                    <a href="{{ path('voyages.sort', {champ:'pays', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> <</a>
+                    <a href="{{ path('voyages.sort', {champ:'pays', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> > </a>
+                     <form class="form-inline mt-1" method="POST" action="{{ path('voyages.findallequal', {champ:"pays"}) }}">
+                        <div class="form-group mr-1 mb-2">
+                            <input type="text" class="sm" name="recherche">
+                            <button type="submit" class="btn btn-primary mb-2 btn-sm">filtrer</button>
+                        </div>
+                    </form>
+                </th>
+                <th class="text-end" scope="col">
+                    Note
+                    <a href="{{ path('voyages.sort', {champ:'note', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> <</a>
+                    <a href="{{ path('voyages.sort', {champ:'note', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> > </a>
+                </th>
+                <th class="text-center" scope="col">
+                    Date
+                    <a href="{{ path('voyages.sort', {champ:'datecreation', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> <</a>
+                    <a href="{{ path('voyages.sort', {champ:'datecreation', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> > </a>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -25,7 +49,18 @@
                         {{ visite.pays }}
                     </td>
                     <td class="text-end">
-                        <strong>{{ visite.note }}/20</strong>
+                        <strong>
+                            {% if visite.note<10 %}
+                                <div class="text-danger">
+                                    {{ visite.note }}/20
+                                </div>
+                            {% else %}
+                                <div class="text-success">
+                                    {{ visite.note }}/20
+                                </div>
+                            {% endif %}
+                                    
+                        </strong>
                     </td>
                     <td class="text-center">
                         {{ visite.datecreationstring}}
