--- a/templates/admin/admin.voyage.edit.html.twig
+++ b/templates/admin/admin.voyage.edit.html.twig
@@ -1,5 +1,35 @@
 {% extends "baseadmin.html.twig" %}
 
 {% block body %}
-    <h2>{{ visite.ville }}</h2>
+    <h2>Detail visite : </h2>
+    {{ form_start(formVisite) }}
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                     <div class="col-auto">
+                         {{ form_row(formVisite.datecreationstring) }}
+                     </div>
+                    <div class="col">
+                        {{ form_row(formVisite.note) }}
+                    </div>
+                    <div class="col">
+                        {{ form_row(formVisite.tempmin) }}
+                    </div>
+                    <div class="col">
+                        {{ form_row(formVisite.tempmax) }}
+                    </div>
+                </div>
+                {{ form_row(formVisite.ville) }}
+                {{ form_row (formVisite.pays) }}
+            </div>
+            <div class="col">
+                <!-- emplacement de l'image -->
+            </div>
+        </div>
+            <div class='row'>
+                <div class='col'>
+                    {{ form_row(formVisite.avis) }}
+                </div>
+            </div>
+    {{ form_end(formVisite) }}
 {% endblock %}
