--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -7,6 +7,19 @@
         <!-- titre -->
         <div class="text-center">
             <h1> Gestion des Voyages </h1>
+            <!-- menu -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin.voyages') }}">Voyages</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin.environnements') }}">Environnement</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
            
         </div>
     </div>
