--- a/templates/pages/Voyage.html.twig
+++ b/templates/pages/Voyage.html.twig
@@ -15,6 +15,14 @@
         </div>
             <div class="col">
                 <!-- emplacement de l'image -->
+                <div>
+                {% if visite.imageName %}
+                        <img src={{ app.request.getBasePath()~vich_uploader_asset(visite, 'imageFile') }}
+                             class="card-img-top" style="width: 100%; height: auto">
+                    {% else %}
+                        <p>(aucune image)<p>
+                    {% endif %}
+                </div>
             </div>
     </div>
     <div class='row mt-5'>
