--- a/templates/pages/acceuil.html.twig
+++ b/templates/pages/acceuil.html.twig
@@ -1,5 +1,52 @@
 {% extends "basefront.html.twig" %}
 {% block body %}
-<h1> Page D'acceuil </h1>
+<h1> Bienvenue sur mon site personnel de présentation de mes voyages. </h1>
 
-{% endblock %}
+<p>Dans la partie <a href="{{ path('voyages') }}"> Voyages </a>, vous pouvez voir la liste des visites que j'ai faites dans differentes villes.<br>
+    A chaque fois j'ai précisé la ville visitée, le pays, j'ai mis une noté (entre 0 et 20) et il y a aussi une date de visite.<br>
+    Vous pouvez trier la liste en fonction des villes, des pays, des notes et des des dates, aussi bbien dans l'ordre croissant que décroissant.<br>
+    Vous pouvez aussi filtrer les visites par rapport a une ville ou un pays.<br>
+    En cliquant sur la ville de la visite, vous pouvez avoir plus d'informations dessus:<br>
+    températures min et max, une description de la visite, les environnements (montagne, mer, desert...) et une photo.<br>
+    Enfin, vous pouvez me contacter avec le formulaire de <a href="{{ path('contact') }}"> Contact </a>.<br>
+</p>
+<br><br>
+
+<p>Voici mes 2 derniers voyages: </p>
+
+<table>
+    <tr>
+        {% for visite in visites %}
+            <td style="vertical-align: text-top; widht:50%">
+                <div class="row">
+                    <div class="col">
+                        <!-- emplacement de la photo -->
+                        {% if visite.imageName %}
+                        <img src="{{ app.request.getBasePath() ~vich_uploader_asset(visite, 'imageFile') }}"
+                             class="card-img-top" style="width:100%; height:auto;">
+                        {% endif %}
+                    </div>
+                    <div class="col">
+                        <p>{{ visite.datecreationstring }}</p>
+                        <h5 class="text-primary">
+                            <a href="{{ path('voyages.showone', {id:visite.id}) }}">{{ visite.ville }}</a>
+                        </h5>
+                            <p>{{ visite.pays }}</p>
+                            {% if visite.note>=10 %}
+                                <div class="text-success">{{ visite.note }}/20</div>
+                            {% else %}
+                                <div class ="text-danger">{{ visite.note }}/20</div>
+                            {% endif %}
+                            t° entre {{ visite.tempmin }}° et {{ visite.tempmax }}° <br>
+                            <strong>Environnements : </strong><br>
+                            {% for environnement in visite.environnements %}
+                                {{ environnement.nom }}
+                                {% endfor %}
+                    </div>
+                </div>
+            </td>
+        {% endfor %}
+    </tr>
+</table>
+    {% endblock %}
+                                    
